Adding tests for RecommendationController and implementing RecommendationsRepository